// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Core App Snapshot Tests Core App - Complete App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-core-app-complete": {
    "Description": "(SO0320-app) Modern Data Architecture Accelerator. Version 1.0.0",
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-core-app-complete/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "app",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-core-app-complete",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-app) Modern Data Architecture Accelerator. Version 1.0.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Test parameter for core app snapshot testing",
          "Name": "/test-org/test-domain/test-core-app-complete/test-parameter",
          "Tags": {
            "mdaa_cdk_app": "app",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-core-app-complete",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-value",
        },
        "Type": "AWS::SSM::Parameter",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`Core App Snapshot Tests Core App Stack - Basic Snapshot Test 1`] = `
{
  "Description": "(SO0320-app) Modern Data Architecture Accelerator. Version 1.0.0",
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Description": "Stack description parameter to update on version changes",
        "Name": "/test-org/test-domain/test-core-app-basic/aws-solution",
        "Tags": {
          "mdaa_cdk_app": "app",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-core-app-basic",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "(SO0320-app) Modern Data Architecture Accelerator. Version 1.0.0",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Description": "Test parameter for core app snapshot testing",
        "Name": "/test-org/test-domain/test-core-app-basic/test-parameter",
        "Tags": {
          "mdaa_cdk_app": "app",
          "mdaa_domain": "test-domain",
          "mdaa_env": "test-env",
          "mdaa_module_name": "test-core-app-basic",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "test-value",
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Core App Snapshot Tests Core App Stack - Development Snapshot Test 1`] = `
{
  "Description": "(SO0320-app) Modern Data Architecture Accelerator. Version 1.0.0",
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValuetestorgdevelopmentcaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/test-org/development/caef-bootstrap/role-helper-service-token",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Description": "Stack description parameter to update on version changes",
        "Name": "/test-org/development/test-core-app-dev/aws-solution",
        "Tags": {
          "mdaa_cdk_app": "app",
          "mdaa_domain": "development",
          "mdaa_env": "dev",
          "mdaa_module_name": "test-core-app-dev",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "(SO0320-app) Modern Data Architecture Accelerator. Version 1.0.0",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Description": "Test parameter for core app snapshot testing",
        "Name": "/test-org/development/test-core-app-dev/test-parameter",
        "Tags": {
          "mdaa_cdk_app": "app",
          "mdaa_domain": "development",
          "mdaa_env": "dev",
          "mdaa_module_name": "test-core-app-dev",
          "mdaa_org": "test-org",
        },
        "Type": "String",
        "Value": "test-value",
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`Core App Snapshot Tests Core App Stack - Production Snapshot Test 1`] = `
{
  "Description": "(SO0320-app) Modern Data Architecture Accelerator. Version 1.0.0",
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "SsmParameterValueenterpriseproductioncaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Default": "/enterprise/production/caef-bootstrap/role-helper-service-token",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Description": "Stack description parameter to update on version changes",
        "Name": "/enterprise/production/test-core-app-prod/aws-solution",
        "Tags": {
          "mdaa_cdk_app": "app",
          "mdaa_domain": "production",
          "mdaa_env": "prod",
          "mdaa_module_name": "test-core-app-prod",
          "mdaa_org": "enterprise",
        },
        "Type": "String",
        "Value": "(SO0320-app) Modern Data Architecture Accelerator. Version 1.0.0",
      },
      "Type": "AWS::SSM::Parameter",
    },
    "REPLACED-CFN-LOGICAL-ID": {
      "Properties": {
        "Description": "Test parameter for core app snapshot testing",
        "Name": "/enterprise/production/test-core-app-prod/test-parameter",
        "Tags": {
          "mdaa_cdk_app": "app",
          "mdaa_domain": "production",
          "mdaa_env": "prod",
          "mdaa_module_name": "test-core-app-prod",
          "mdaa_org": "enterprise",
        },
        "Type": "String",
        "Value": "test-value",
      },
      "Type": "AWS::SSM::Parameter",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
